[build-system]
# Setuptools version should match setup.py; wheel because pip will insert it noisily
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = 'setuptools.build_meta'

[project]
name = "models"
version = "0.0.1"
authors = [
  { name="brain-bican-models developers"},
]
description = "A library for brain-bican data models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "Apache 2.0"}
dependencies = [
    "linkml==1.8.6",
]

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "mkdocs-material",
    "mkdocs-mermaid2-plugin"
]

[project.urls]
"Homepage" = "https://brain-bican.github.io/models/"
